# RudeBase3D

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  rudebase3d.code-workspace
.cursor/rules/: add-to-changelog.mdc  bug-fix.mdc  check.mdc  clean.mdc  code-analysis.mdc  commit-fast.mdc  commit.mdc  context-prime.mdc  continuous-improvement.mdc  create-docs.mdc  cursor-rules-meta-guide.mdc  implement-task.mdc  pr-review.mdc  update-docs.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
assets/shaders/: basic.frag  basic.vert  simple.vert
docs/: 3D_Modeling_Software_Roadmap.md  ARCHITECTURE_IMPROVEMENTS.md  BRANCHING_STRATEGY.md  CAMERA_CONTROLS.md  CHANGELOG.md  DEVELOPMENT_MILESTONE_SUMMARY.md  DOCUMENTATION_STANDARDS.md  FILE_HEADER_STANDARDS.md  GIT_WORKFLOW.md  GOVERNANCE.md  HYBRID_IMPLEMENTATION_SUMMARY.md  IN_CODE_DOCUMENTATION_PLAN.md  MODELING_TOOLS_INTEGRATION.md  MODERN_3D_ARCHITECTURE.md  PROJECT_OVERVIEW.md  PROJECT_STATUS_COMPLETE.md  README.md  RESTRUCTURE_PLAN.md  ROADMAP.md  RudeBase3D Development Roadmap.md  THEME_SYSTEM.md  UI_DEVELOPMENT.md  UI_UX_EPIC_TEMPLATE.md  UI_UX_STATUS.md  VIEWPORT_ARCHITECTURE_OVERHAUL.md  architecture.md  build-system.md  deployment.md  development.md  files.md  modelingtechniques.md  project-overview.md  testing.md
include/core/: application_controller.hpp  camera.hpp  component_picker.hpp  core_system.hpp  edit_preview_system.hpp  entity.hpp  entity_picker.hpp  global_shaders.hpp  half_edge_mesh.hpp  half_edge_mesh_iterators.hpp  half_edge_utils.hpp  halfedge_mesh.hpp  material.hpp  mesh.hpp  mesh_elements.hpp  mesh_forward.hpp  mesh_iterator.hpp  mesh_operation_manager.hpp  primitive_manager.hpp  qt_glm_utils.hpp  scene.hpp  scene_manager.hpp  scene_manager2.hpp  selection_manager.hpp  selection_renderer.hpp  shader_utils.hpp  transform.hpp
include/ecs/: Component.h  ComponentArray.h  ComponentManager.h  ECS.h  ECSManager.h  Entity.h  EntityManager.h  System.h  SystemManager.h  World.h
include/ecs/components/: CoreComponents.h
include/ecs/systems/: CoreSystems.h
include/event/: event_dispatcher.hpp  event_types.hpp  gizmo_handler.hpp  keyboard_handler.hpp  mouse_handler.hpp
include/gizmo/: gizmo.hpp  gizmo_manager.hpp  rotate_gizmo.hpp  scale_gizmo.hpp  translate_gizmo.hpp
include/input/: EventDrivenCameraController.hpp
include/panels/: outliner_panel.hpp  properties_panel.hpp  selection_panel.hpp
include/toolbars/: base_toolbar.hpp  main_toolbar.hpp  primitives_toolbar.hpp  selection_toolbar.hpp  toolbar_manager.hpp  transform_toolbar.hpp
include/ui/: edit_preview_panel.hpp
include/ui/dialogs/: SettingsDialog.h
scripts/: README.md  build.bat  build.sh  build_and_sort_errors.ps1  sort_errors.ps1
src/: Common.h  main.cpp
src/core/: CMakeLists.txt  application_controller.cpp  component_picker.cpp  core_system.cpp  edit_preview_system.cpp  entity.cpp  entity_picker.cpp  glm_wrapper.hpp  global_shaders.cpp  half_edge_mesh.cpp  halfedge_mesh.cpp  halfedge_mesh.cpp.backup  material.cpp.backup  mesh.cpp  mesh_iterator.cpp  mesh_operation_manager.cpp  primitive_manager.cpp  scene.cpp  scene_manager.cpp  selection_manager.cpp  selection_renderer.cpp  shader_utils.cpp  transform.cpp
src/core/math/: Transform.cpp  Transform.h
src/ecs/: CMakeLists.txt  CoreSystems.cpp  ECSManager.cpp
src/event/: CMakeLists.txt  event_dispatcher.cpp  gizmo_handler.cpp  keyboard_handler.cpp  mouse_handler.cpp
src/geometry/core/: GeometryTypes.cpp  GeometryTypes.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Vertex.cpp  Vertex.h
src/geometry/halfedge/: HalfEdgeMesh.cpp  HalfEdgeMesh.h  HalfEdgeUtils.cpp
src/geometry/hybrid/: GeometryConverter.cpp  GeometryConverter.h  HybridGeometryManager.cpp  HybridGeometryManager.h
src/geometry/primitives/: MeshGenerator.cpp  MeshGenerator.h
src/geometry/subdivision/: SubdivisionMesh.h
src/gizmo/: CMakeLists.txt  gizmo.cpp  gizmo_manager.cpp  rotate_gizmo.cpp  scale_gizmo.cpp  translate_gizmo.cpp
src/input/: BlenderCameraController.cpp  BlenderCameraController.h  CMakeLists.txt  CameraController.cpp  CameraController.h  EventDrivenCameraController.cpp  ICameraController.cpp  ICameraController.h  InputController.cpp  InputController.h  InputEvents.h  MayaCameraController.cpp  MayaCameraController.h
src/io/formats/: FileFormatHandlers.cpp  FileFormatHandlers.h
src/io/project/: AssetManager.cpp  AssetManager.h
src/panels/: CMakeLists.txt  outliner_panel.cpp  properties_panel.cpp  selection_panel.cpp
src/rendering/core/: RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.cpp.backup  Renderer.h
src/rendering/effects/: LightingSystem.cpp  LightingSystem.h
src/scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h
src/toolbars/: CMakeLists.txt  base_toolbar.cpp  main_toolbar.cpp  primitives_toolbar.cpp  selection_toolbar.cpp  toolbar_manager.cpp  transform_toolbar.cpp
src/tools/base/: EditContext.cpp  EditContext.h
src/tools/modeling/: ExtrudeTool.cpp  ExtrudeTool.h  InsetTool.cpp  InsetTool.h  LoopCutTool.cpp  LoopCutTool.h  ModelingToolManager.cpp  ModelingToolManager.h  SubdivisionTool.cpp  SubdivisionTool.h
src/tools/selection/: SelectionManager.cpp  SelectionManager.h
src/ui/: edit_preview_panel.cpp
src/ui/components/: BaseComponent.cpp  BaseComponent.h  ThemeSelector.cpp  ThemeSelector.h  ThemedButton.cpp  ThemedButton.h
src/ui/core/: LayoutManager.cpp  LayoutManager.h  ThemeManager.cpp  ThemeManager.h  UIManager.cpp  UIManager.h
src/ui/dialogs/: SettingsDialog.cpp
src/ui/panels/: PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
src/ui/viewport/: GLFWViewport.cpp  GLFWViewport.h  GridSystem.cpp  GridSystem.h  TestViewport.cpp  TestViewport.h  Viewport3D.cpp  Viewport3D.h  ViewportManager.cpp  ViewportManager.h
src/ui/windows/: MainWindow.cpp  MainWindow.h
